==> jaw0/osj5/src/machdep/arm_cm/atsams70/src/spi.c <==
#include <conf.h>
#include <proc.h>
#include <arch.h>
#include <locks.h>
#include <dev.h>
#include <error.h>
#include <misc.h>
#include <spi.h>
#include <gpio.h>
#include <atsam.h>
#include <nvic.h>
#include <pmc.h>
#include <xdma.h>
#  define CRUMBS	"spi"
#include <crumbs.h>
#define SPI_STATE_DISABLED          0
#define SPI_STATE_IDLE              1
#define SPI_STATE_XFER_DONE         2
#define SPI_STATE_DMA_DONE	    3
#define SPI_STATE_BUSY              4
#define SPI_STATE_ERROR             -1
#define DMA_MIN_SIZE	64

int
spi_init(struct Device_Conf *dev){
    int unit = dev->unit;
    struct SPIInfo *ii = spiinfo + unit;
    Spi *addr;

    bzero(ii, sizeof(struct SPIInfo));

    switch(unit){
    case 0:
        ii->addr      = addr = SPI0;
        ii->irq       = SPI0_IRQn;
        ii->dmaitx    = 1;
        ii->dmairx    = 2;
        pmc_enable( ID_SPI0 );

        gpio_init( GPIO_D20, GPIO_AF_B );	// MISO
        gpio_init( GPIO_D21, GPIO_AF_B );	// MOSI
        gpio_init( GPIO_D22, GPIO_AF_B );	// SCK
        break;
    case 1:
        ii->addr      = addr = SPI1;
        ii->irq       = SPI1_IRQn;
        ii->dmaitx    = 1;
        ii->dmairx    = 2;
        pmc_enable( ID_SPI1 );

        gpio_init( GPIO_C26, GPIO_AF_C );	// MISO
        gpio_init( GPIO_C27, GPIO_AF_C );	// MOSI
        gpio_init( GPIO_C24, GPIO_AF_C );	// SCK
        break;
    default:
        // ...
        PANIC("invalid spi device");
    }

    ii->dmactx = dma_alloc( (dma_handler_t)_dma_handler, (int)ii );
    ii->dmacrx = dma_alloc( (dma_handler_t)_dma_handler, (int)ii );

    addr->SPI_CR = SPI_CR_SWRST;
    addr->SPI_MR = SPI_MR_MSTR | (0xFF<<24); // maximum dlybcs
    // addr->SPI_CR = 1<<30;	// FIFO enable?
    addr->SPI_CR = SPI_CR_SPIEN;

    nvic_enable( ii->irq,  IPL_DISK );

    ii->name  = dev->name;
    ii->state = SPI_STATE_IDLE;

    bootmsg("%s at io 0x%x irq %d dma %d+%d\n",
            dev->name, ii->addr, ii->irq, ii->dmaitx, ii->dmairx);

    return 0;
}

static inline int
_spi_rxtx1(Spi *dev, int val, int lastp){
    int sr, c;

    // wait until ready
    while(1){
        sr = dev->SPI_SR;
        if( sr & SPI_SR_TDRE  )     break;
        if( sr & SPI_SR_TXEMPTY )   break;
    }

    dev->SPI_TDR = val & 0xFF;
    if( lastp )
        dev->SPI_CR = SPI_CR_LASTXFER;

    while(1){
        sr = dev->SPI_SR;
        if( sr & SPI_SR_RDRF )      break;
    }

    c = dev->SPI_RDR;
    return c & 0xFF;
}

static inline int
_msg_write(struct SPIInfo *ii){
    spi_msg *m = ii->msg;
    int i;

    DROP_CRUMB("write", m->dlen, ii->addr->SPI_SR);
    if( m->dlen >= DMA_MIN_SIZE ){
        _dma_write(ii);
    }else{
        for(i=0; i<m->dlen; i++)
            _spi_rxtx1( ii->addr, m->data[i], (ii->num_msg == 1) && (i == m->dlen-1) );
    }

    DROP_CRUMB("/write", 0, ii->addr->SPI_SR);

    return 0;
}

static int
_msg_do(struct SPIInfo *ii){
    spi_msg *m = ii->msg;
    int i;

    DROP_CRUMB("msg-do", m->mode, m->dlen);
    proc_trace_add("spi/do", m->mode);

    m->response = 0;
    ii->state = SPI_STATE_BUSY;

    switch(m->mode){
    case SPIMO_READ:
        _msg_read(ii);
        break;
    case SPIMO_WRITE:
        _msg_write(ii);
        break;
    case SPIMO_UNTIL:
    case SPIMO_UNTIL_SLOW:
        _msg_until(ii);
        break;

    case SPIMO_PINSON:
    case SPIMO_PINSOFF:
        _spi_cspins(ii->cf, (m->mode == SPIMO_PINSON));
        // fall thru
    case SPIMO_DELAY:
        for(i=0; i<m->dlen; i++)
            _spi_rxtx1( ii->addr, 0xFF, 0 );
        break;
    case SPIMO_FINISH:
        ii->addr->SPI_CR = SPI_CR_LASTXFER;
        while( (ii->addr->SPI_SR & SPI_SR_TXEMPTY) == 0 ){
            if( ii->timeout && get_time() > ii->timeout ) break;
        }
        break;
    }

    return 0;
}

int
spi_xfer(const struct SPIConf * cf, int nmsg, spi_msg *msgs, int timeout){
    if( cf->unit >= N_SPI ) return -1;
    if( !nmsg ) return 0;

    struct SPIInfo *ii = spiinfo + cf->unit;
    Spi *dev   = ii->addr;
    int verbose=0;

    if( msgs[0].mode & 0x80 ){
        verbose = 1;
        msgs[0].mode &= ~0x80;
    }

#ifdef SPIVERBOSE
    kprintf("spi xfer: unit %d, speed %d, nss %d, _ss %d, to %d\n", cf->unit, cf->speed, cf->nss, cf->_ss, timeout);
#endif

    if( currproc ){
        int r = sync_tlock(&ii->lock, "spi.L", timeout);
        if( !r ) return SPI_XFER_TIMEOUT;
    }

    RESET_CRUMBS();


    ii->cf        = cf;
    ii->msg       = msgs;
    ii->num_msg   = nmsg;
    ii->state     = SPI_STATE_BUSY;
    ii->timeout   = timeout ? get_time() + timeout : 0;

    // enable device, pins
    _spi_conf_start(cf, ii);
    DROP_CRUMB("spi-on", cf->unit, 0);

    while( ii->num_msg > 0 ){
        int plx = splproc();
        _msg_do( ii );
        splx(plx);
        if( ii->state == SPI_STATE_ERROR ){
            DROP_CRUMB("error", 0,0);
            break;
        }
        ii->num_msg --;
        if( ii->msg ) ii->msg ++;
    }

    if( ii->num_msg == 0 && ii->state != SPI_STATE_ERROR )
        ii->state = SPI_STATE_XFER_DONE;

    // probably finished during the time it took to get here
    DROP_CRUMB("spi-wait!busy", dev->SPI_SR, 0);
    while( 0 ){
        int x;
        int sr = dev->SPI_SR;
        if( (sr & SPI_SR_TXEMPTY) == 0 || (sr && SPI_SR_SPIENS) == 0 ) break;
        if( sr & SPI_SR_RDRF ) x = dev->SPI_RDR;
        if( ii->timeout && get_time() > ii->timeout ) break;
    }

    // disable device, pins
    _spi_conf_done(cf, ii);

    DROP_CRUMB("done", ii->state, 0);

#ifdef SPIVERBOSE
    if( verbose || (ii->state != SPI_STATE_XFER_DONE) ){
        kprintf("spi xfer\n");
        _spi_dump_crumb();
    }
#endif

    int r;
    switch(ii->state){
    case SPI_STATE_XFER_DONE:	r = SPI_XFER_OK;	break;
    case SPI_STATE_ERROR:	r = SPI_XFER_ERROR;	break;
    default:			r = SPI_XFER_TIMEOUT;	break;
    }

    ii->state = SPI_STATE_IDLE;
    if( currproc )
        sync_unlock( &ii->lock );

    return r;
}
