==> jaw0/osj5/src/machdep/arm_cm/stm32/src/spi.c <==
#include <conf.h>
#include <proc.h>
#include <arch.h>
#include <locks.h>
#include <dev.h>
#include <error.h>
#include <clock.h>
#include <spi.h>
#include <gpio.h>
#include <stm32.h>
#include <nvic.h>
#define CR1_CRCEN	0x2000
#define CR1_SSM		0x200
#define CR1_SSI		0x100
#define CR1_SPE		0x40
#define CR1_MSTR	0x4
#define CR2_TXEIE	0x80
#define CR2_RXNEIE	0x40
#define CR2_ERRIE	0x20
#define CR2_TXDMAEN	0x2
#define CR2_RXDMAEN	0x1
#define SR_BSY		0x80
#define SR_TXE		0x2
#define SR_RXNE		0x1
#define DMACCR_MINC	0x80
#define DMACCR_DIR_M2P	0x10	// 0: periph=>mem, 1: mem=>periph
#define DMACCR_TEIE	0x8
#define DMACCR_TCIE	0x2
#define DMACCR_EN	0x1
#define DMASCR_MINC	(1<<10)
#define DMASCR_DIR_M2P  (1<<6)
#define DMASCR_PFCTRL	(1<<5)
#define DMASCR_TEIE	4
#define DMASCR_TCIE	16
#define DMASCR_EN	1
#define SPI_STATE_DISABLED          0
#define SPI_STATE_IDLE              1
#define SPI_STATE_XFER_DONE         2
#define SPI_STATE_DMA_DONE	    3
#define SPI_STATE_BUSY              4
#define SPI_STATE_ERROR             -1
#define DMA_MIN_SIZE	64
#define NR_CRUMBS       128

int
spi_init(struct Device_Conf *dev){
    int unit = dev->unit;
    struct SPIInfo *ii = spiinfo + unit;
    SPI_TypeDef *addr;
    int dmairqrx, dmairqtx, dmanrx, dmantx;

    bzero(ii, sizeof(struct SPIInfo));

#if defined(PLATFORM_STM32F1)
    switch(unit){
    case 0:
        // on ahb2, dma1 chan2+3
        // CLK = A5, MISO = A6, MOSI = A7
        ii->addr      = addr = SPI1;
        ii->irq       = IRQ_SPI1;
        ii->dma       = DMA;
        ii->rxdma     = DMA_Channel2;
        ii->txdma     = DMA_Channel3;
        ii->clock     = APB2CLOCK;
        dmairqrx      = IRQ_DMA1_CHANNEL2;
        dmairqtx      = IRQ_DMA1_CHANNEL3;
        ii->dmanrx    = 2;
        ii->dmantx    = 3;
        RCC->APB2ENR |= 1;	// AFI
        RCC->APB2ENR |= 1<<12;	// spi
        gpio_init( GPIO_A5, GPIO_AF_OUTPUT_PP | GPIO_OUTPUT_50MHZ );
        gpio_init( GPIO_A6, GPIO_INPUT_FLOATING );
        gpio_init( GPIO_A7, GPIO_AF_OUTPUT_PP | GPIO_OUTPUT_50MHZ );
        break;
    case 1:
        // on ahb1, dma1 chan 4+5
        // CLK = B13, MISO = B14, MOSI = B15
        ii->addr      = addr = SPI2;
        ii->irq       = IRQ_SPI2;
        ii->dma       = DMA;
        ii->rxdma     = DMA_Channel4;
        ii->txdma     = DMA_Channel5;
        ii->clock     = APB1CLOCK;
        dmairqrx      = IRQ_DMA1_CHANNEL4;
        dmairqtx      = IRQ_DMA1_CHANNEL5;
        ii->dmanrx    = 4;
        ii->dmantx    = 5;
        RCC->APB2ENR |= 1;	// AFI
        RCC->APB1ENR |= 1<<14;	// spi
        gpio_init( GPIO_B13, GPIO_AF_OUTPUT_PP | GPIO_OUTPUT_50MHZ );
        gpio_init( GPIO_B14, GPIO_INPUT_FLOATING );
        gpio_init( GPIO_B15, GPIO_AF_OUTPUT_PP | GPIO_OUTPUT_50MHZ );
        break;
    default:
        // ...
        PANIC("invalid spi device");
    }

    RCC->AHBENR |= 1;	// DMA1

#elif defined(PLATFORM_STM32F4)
    switch(unit){
    case 0:
        // on ahb2, dma2 chan2+3
        // CLK = A5, MISO = A6, MOSI = A7
        ii->addr      = addr = SPI1;
        ii->irq       = IRQ_SPI1;
        ii->rxdma     = DMA2_Stream2;
        ii->txdma     = DMA2_Stream3;
        ii->dma	      = DMA2;
        ii->clock     = APB2CLOCK;
        dmairqrx      = IRQ_DMA2_STREAM2;
        dmairqtx      = IRQ_DMA2_STREAM3;
        ii->dmanrx    = 2;
        ii->dmantx    = 3;
        ii->dmachan   = 3;
        RCC->APB2ENR |= 1<<12;	// spi
        RCC->AHB1ENR |= 1<<22;	// DMA2
        gpio_init( GPIO_A5, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_50MHZ );
        gpio_init( GPIO_A6, GPIO_AF(5) | GPIO_PULL_UP );
        gpio_init( GPIO_A7, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_50MHZ );
        break;
    case 1:
        // on ahb1, dma1 chan 3+4
        // CLK = B13, MISO = B14, MOSI = B15
        ii->addr      = addr = SPI2;
        ii->irq       = IRQ_SPI2;
        ii->rxdma     = DMA1_Stream3;
        ii->txdma     = DMA1_Stream4;
        ii->dma	      = DMA1;
        ii->clock     = APB1CLOCK;
        dmairqrx      = IRQ_DMA1_STREAM3;
        dmairqtx      = IRQ_DMA1_STREAM4;
        ii->dmanrx    = 3;
        ii->dmantx    = 4;
        ii->dmachan   = 0;
        RCC->APB1ENR |= 1<<14;	// spi
        RCC->AHB1ENR |= 1<<21;	// DMA1
        gpio_init( GPIO_B13, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_50MHZ );
        gpio_init( GPIO_B14, GPIO_AF(5) | GPIO_PULL_UP );
        gpio_init( GPIO_B15, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_50MHZ );
        break;
    case 2:
        // on ahb1, dma1 chan 2+5
        // CLK = B3, MISO = B4, MOSI = B5
        ii->addr      = addr = SPI3;
        ii->irq       = IRQ_SPI3;
        ii->rxdma     = DMA1_Stream2;
        ii->txdma     = DMA1_Stream5;
        ii->dma	      = DMA1;
        ii->clock     = APB2CLOCK;
        dmairqrx      = IRQ_DMA1_STREAM2;
        dmairqtx      = IRQ_DMA1_STREAM5;
        ii->dmanrx    = 2;
        ii->dmantx    = 5;
        ii->dmachan   = 0;
        RCC->APB1ENR |= 1<<15;	// spi
        RCC->AHB1ENR |= 1<<21;	// DMA1
        gpio_init( GPIO_B3, GPIO_AF(6) | GPIO_PUSH_PULL | GPIO_SPEED_50MHZ );
        gpio_init( GPIO_B4, GPIO_AF(6) | GPIO_PULL_UP );
        gpio_init( GPIO_B5, GPIO_AF(6) | GPIO_PUSH_PULL | GPIO_SPEED_50MHZ );
        break;
    default:
        // ...
        PANIC("invalid spi device");
    }
#elif defined(PLATFORM_STM32L1)
    switch(unit){
    case 0:
        // on ahb2, dma1 chan2+3
        // CLK = A5, MISO = A6, MOSI = A7
        ii->addr      = addr = SPI1;
        ii->irq       = IRQ_SPI1;
        ii->rxdma     = DMA1_Channel2;
        ii->txdma     = DMA1_Channel3;
        ii->dma       = DMA1;
        ii->clock     = APB2CLOCK;
        dmairqrx      = IRQ_DMA1_CHANNEL2;
        dmairqtx      = IRQ_DMA1_CHANNEL3;
        ii->dmanrx    = 2;
        ii->dmantx    = 3;
        RCC->APB2ENR |= 1<<12;	// spi
        RCC->AHBENR  |= 1<<24;	// DMA1
        gpio_init( GPIO_A5, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_HIGH );
        gpio_init( GPIO_A6, GPIO_AF(5) | GPIO_PULL_UP );
        gpio_init( GPIO_A7, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_HIGH );
        break;
    case 1:
        // on ahb1, dma1 chan 3+4
        // CLK = B13, MISO = B14, MOSI = B15
        ii->addr      = addr = SPI2;
        ii->irq       = IRQ_SPI2;
        ii->rxdma     = DMA1_Channel4;
        ii->txdma     = DMA1_Channel5;
        ii->dma       = DMA1;
        ii->clock     = APB1CLOCK;
        dmairqrx      = IRQ_DMA1_CHANNEL4;
        dmairqtx      = IRQ_DMA1_CHANNEL5;
        ii->dmanrx    = 4;
        ii->dmantx    = 5;
        RCC->APB1ENR |= 1<<14;	// spi
        RCC->AHBENR  |= 1<<24;	// DMA1
        gpio_init( GPIO_B13, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_HIGH );
        gpio_init( GPIO_B14, GPIO_AF(5) | GPIO_PULL_UP );
        gpio_init( GPIO_B15, GPIO_AF(5) | GPIO_PUSH_PULL | GPIO_SPEED_HIGH );
        break;
    case 2:
        // on ahb1, dma2 chan 1+2
        // CLK = B3, MISO = B4, MOSI = B5
        ii->addr      = addr = SPI3;
        ii->irq       = IRQ_SPI3;
        ii->rxdma     = DMA2_Channel1;
        ii->txdma     = DMA2_Channel2;
        ii->dma       = DMA2;
        ii->clock     = APB1CLOCK;
        dmairqrx      = IRQ_DMA2_CHANNEL1;
        dmairqtx      = IRQ_DMA2_CHANNEL2;
        ii->dmanrx    = 1;
        ii->dmantx    = 2;
        RCC->APB1ENR |= 1<<15;	// spi
        RCC->AHBENR  |= 1<<25;	// DMA2
        gpio_init( GPIO_B3, GPIO_AF(6) | GPIO_PUSH_PULL | GPIO_SPEED_HIGH );
        gpio_init( GPIO_B4, GPIO_AF(6) | GPIO_PULL_UP );
        gpio_init( GPIO_B5, GPIO_AF(6) | GPIO_PUSH_PULL | GPIO_SPEED_HIGH );
        break;
    default:
        // ...
        PANIC("invalid spi device");
    }
#else
#  error "unknown platform"
#endif

    addr->CR1 |= CR1_SSM | /*CR1_SSI | */ CR1_MSTR;
    addr->CR2 &= ~0xE7;

    int speed = _set_speed(ii, dev->baud);

    nvic_enable( ii->irq,  IPL_DISK );
    nvic_enable( dmairqrx, IPL_DISK );
    nvic_enable( dmairqtx, IPL_DISK );

    ii->name  = dev->name;
    ii->state = SPI_STATE_IDLE;

    bootmsg("%s at io 0x%x irq %d dma %d+%d speed %dkHz\n",
            dev->name, ii->addr, ii->irq, ii->dmanrx, ii->dmantx, speed/1000);

    return 0;
}

static inline int
_spi_rxtx1(SPI_TypeDef *dev, int val){
    int sr, c;

    // wait until ready
    while(1){
        sr = dev->SR;
        if( sr & SR_TXE  ) break;
    }

    dev->DR = val;

    while(1){
        sr = dev->SR;
        if( sr & SR_RXNE ){
            c = dev->DR;
            return c;
        }
    }
}

static inline int
_msg_write(struct SPIInfo *ii){
    spi_msg *m = ii->msg;
    int i;

    if( m->dlen > DMA_MIN_SIZE ){
        _dma_enable_write(ii);
        _msg_dma_wait(ii);
        m->response = dma_idle_sink;
    }else{
        for(i=0; i<m->dlen; i++)
            _spi_rxtx1( ii->addr, m->data[i] );
    }

    return 0;
}

static int
_msg_do(struct SPIInfo *ii){
    spi_msg *m = ii->msg;
    int i;

    SPI_CRUMB("msg-do", m->mode, m->dlen);
    proc_trace_add("spi/do", m->mode);

    m->response = 0;
    ii->state = SPI_STATE_BUSY;

    switch(m->mode){
    case SPIMO_READ:
        _msg_read(ii);
        break;
    case SPIMO_WRITE:
        _msg_write(ii);
        break;
    case SPIMO_UNTIL:
    case SPIMO_UNTIL_SLOW:
        _msg_until(ii);
        break;

    case SPIMO_PINSON:
    case SPIMO_PINSOFF:
        _spi_cspins(ii->cf, (m->mode == SPIMO_PINSON));
        // fall thru
    case SPIMO_DELAY:
        for(i=0; i<m->dlen; i++)
            _spi_rxtx1( ii->addr, 0xFF );
        break;
    case SPIMO_FINISH:
        while( ii->addr->SR & SR_BSY ){
            if( ii->timeout && get_time() > ii->timeout ) break;
        }
        break;
    }

    return 0;
}

int
spi_xfer(const struct SPIConf * cf, int nmsg, spi_msg *msgs, int timeout){
    if( cf->unit >= N_SPI ) return -1;
    if( !nmsg ) return 0;

    struct SPIInfo *ii = spiinfo + cf->unit;
    SPI_TypeDef *dev   = ii->addr;
    int verbose=0;

    if( msgs[0].mode & 0x80 ){
        verbose = 1;
        msgs[0].mode &= ~0x80;
    }

    if( currproc ){
        int r = sync_tlock(&ii->lock, "spi.L", timeout);
        if( !r ) return SPI_XFER_TIMEOUT;
    }

    cur_crumb = 0;

#ifdef SPIVERBOSE
    //kprintf("spi xfer2 starting, %d msgs\n", nmsg);
#endif

    ii->cf        = cf;
    ii->msg       = msgs;
    ii->num_msg   = nmsg;
    ii->state     = SPI_STATE_BUSY;
    ii->timeout   = timeout ? get_time() + timeout : 0;

    // enable device, pins
    _spi_conf_start(cf, ii);
    SPI_CRUMB("spi-on", cf->unit, 0);
    dev->CR1 |= CR1_SPE;       // go!

    while( ii->num_msg > 0 ){
        int plx = splproc();
        _msg_do( ii );
        splx(plx);
        if( ii->state == SPI_STATE_ERROR ){
            SPI_CRUMB("error", 0,0);
            break;
        }
        ii->num_msg --;
        if( ii->msg ) ii->msg ++;
    }

    if( ii->num_msg == 0 && ii->state != SPI_STATE_ERROR )
        ii->state = SPI_STATE_XFER_DONE;

    // wait !busy ( ~ 7 bit times from the txe-irq )
    // probably finished during the time it took to get here
    SPI_CRUMB("spi-wait!busy", dev->SR, 0);
    while( dev->SR & SR_BSY ){
        if( ii->timeout && get_time() > ii->timeout ) break;
    }

    // disable device, pins
    _spi_conf_done(cf, ii);

    SPI_CRUMB("done", ii->state, 0);

#ifdef SPIVERBOSE
    if( verbose || (ii->state != SPI_STATE_XFER_DONE) ){
        kprintf("spi xfer\n");
        _spi_dump_crumb();
    }
#endif

    int r;
    switch(ii->state){
    case SPI_STATE_XFER_DONE:	r = SPI_XFER_OK;	break;
    case SPI_STATE_ERROR:	r = SPI_XFER_ERROR;	break;
    default:			r = SPI_XFER_TIMEOUT;	break;
    }

    ii->state = SPI_STATE_IDLE;
    if( currproc )
        sync_unlock( &ii->lock );

    return r;
}
